添加了大道寺知世、李莓铃、诗之本秋穗、菈菈·萨塔琳·戴比路克、西连寺春菜、古手川唯、梦梦·贝莉雅·戴比路克、金色暗影、结城美柑、娜娜·阿斯塔·戴比路克、黑咲芽亚、涅墨西斯、伦·艾尔西·裘利亚、九条凛。

--- a/index.html
+++ b/index.html
@@ -384,18 +384,18 @@
 <tbody>
 	<tr>
 		<td rowspan="2">Java版 20w46a-20w48a</td>
-		<td>v1.12-1126</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1126">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1126">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1126.zip">其它</a></td>
+		<td>v1.12-1127</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1127">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1127">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1127.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="2">Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-1126</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1126">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1126">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1126.zip">其它</a></td>
+		<td>v1.11.2-1127</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1127">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1127">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1127.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
@@ -2982,7 +2982,7 @@
 	<td><a class="ui purple_dye" title="紫色染料"></a></td>
 	<td><a class="ui purple_dye" title="紫色染料"></a></td>
 	<td><a class="ui light_blue_dye" title="淡蓝色染料"></a></td>
-	<td><a class="ui pink_dye" title="粉色染料"></a></td>
+	<td><a class="ui pink_dye" title="粉红色染料"></a></td>
 	<td><a class="ui green_dye" title="绿色染料"></a></td>
 	<td></td>
 	<td></td>
@@ -6356,11 +6356,11 @@
 <tr><th><strong id="粉色甜甜圈">粉色甜甜圈</strong><br />
 		<a class="ui icons18 hunger" title="7"></a><a class="ui icons18 hunger" title="7"></a><a class="ui icons18 hunger" title="7"></a><a class="ui icons18 hunger_half" title="7"></a><br />
 		<a class="ui icons18 speed"></a><span class="lore">速度 00:30</span></th>
-	<td><a href="#甜甜圈">甜甜圈</a>+糖+粉色染料</td>
+	<td><a href="#甜甜圈">甜甜圈</a>+糖+粉红色染料</td>
 	<td><span class="ui cm" title="合成器">
 		<a href="#甜甜圈" class="ci doughnut" title="甜甜圈"></a>
 		<a class="sugar" title="糖"></a>
-		<a class="pink_dye" title="粉色染料"></a>
+		<a class="pink_dye" title="粉红色染料"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
@@ -7896,7 +7896,7 @@
 <tr><td><a class="ui ci silene_pendula"></a></td>
 	<th><strong id="矮雪轮">矮雪轮</strong></th>
 	<td><code>cpp:silene_pendula</code></td>
-	<td><a class="ui pink_dye" title="粉色染料"></a></td>
+	<td><a class="ui pink_dye" title="粉红色染料"></a></td>
 </tr>
 <tr><td><a class="ui ci artemisia_argyi"></a></td>
 	<th><strong id="艾草">艾草</strong></th>
@@ -9088,6 +9088,20 @@
 <tr><th>风见幽香</th><td><a class="ui ci character101"></a></td><td>cpp:character/101</td></tr>
 <tr><th>鬼人正邪</th><td><a class="ui ci character102"></a></td><td>cpp:character/102</td></tr>
 <tr><th>魂魄妖梦</th><td><a class="ui ci character103"></a></td><td>cpp:character/103</td></tr>
+<tr><th>大道寺知世</th><td><a class="ui ci character104"></a></td><td>cpp:character/104</td></tr>
+<tr><th>李莓铃</th><td><a class="ui ci character105"></a></td><td>cpp:character/105</td></tr>
+<tr><th>诗之本秋穗</th><td><a class="ui ci character106"></a></td><td>cpp:character/106</td></tr>
+<tr><th>菈菈·萨塔琳·戴比路克</th><td><a class="ui ci character107"></a></td><td>cpp:character/107</td></tr>
+<tr><th>西连寺春菜</th><td><a class="ui ci character108"></a></td><td>cpp:character/108</td></tr>
+<tr><th>古手川唯</th><td><a class="ui ci character109"></a></td><td>cpp:character/109</td></tr>
+<tr><th>梦梦·贝莉雅·戴比路克</th><td><a class="ui ci character101"></a></td><td>cpp:character/110</td></tr>
+<tr><th>金色暗影</th><td><a class="ui ci character111"></a></td><td>cpp:character/111</td></tr>
+<tr><th>结城美柑</th><td><a class="ui ci character112"></a></td><td>cpp:character/112</td></tr>
+<tr><th>娜娜·阿斯塔·戴比路克</th><td><a class="ui ci character113"></a></td><td>cpp:character/113</td></tr>
+<tr><th>黑咲芽亚</th><td><a class="ui ci character114"></a></td><td>cpp:character/114</td></tr>
+<tr><th>涅墨西斯</th><td><a class="ui ci character115"></a></td><td>cpp:character/115</td></tr>
+<tr><th>伦·艾尔西·裘利亚</th><td><a class="ui ci character116"></a></td><td>cpp:character/116</td></tr>
+<tr><th>九条凛</th><td><a class="ui ci character117"></a></td><td>cpp:character/117</td></tr>
 </tbody></table>
 
 <h3>旗帜、标志和盾牌图案</h3>
@@ -9739,6 +9753,10 @@
 
 </tbody></table>
 
+</div>
+
+
+
 <footer>
 <p>
 	<a href="https://zhangshenxing.gitee.io/craftingplusplus/" title="更多的合成" class="ui ci portable_crafting_machine"></a>
@@ -9752,7 +9770,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-11-26</p>
+<p>最后更新 2020-11-27</p>
 </footer>
 
 </article>
