--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<li><a href="#水果树"><span class="ci" style="background-position: -48px -352px;"></span> 水果树</a></li>
 	<li><a href="#矿石树"><span class="ci" style="background-position: -80px -352px;"></span> 矿石树</a></li>
 	<li><a href="#羊毛树"><span class="ci" style="background-position: -64px -352px;"></span> 羊毛树</a></li>
-	<li><a href="#羊毛树"><span class="ci" style="background-position: -48px -1184px;"></span> 樱花树</a></li>
+	<li><a href="#樱花树"><span class="ci" style="background-position: -48px -1184px;"></span> 樱花树</a></li>
 	<li><a href="#作物田"><span style="background-position: -464px -1584px;"></span> 作物田</a></li>
 	<li><a href="#花草丛"><span class="ci" style="background-position: -80px -288px;"></span> 花草丛</a></li>
 </ul></li>
@@ -377,14 +377,13 @@
 <li>机器——集磨粉炼矿增殖反应晒盐造石造冰于一体的9状态多功能一体机；用于获取绿宝石和附魔之瓶的交易机；代替人力处理物品的物品处理机；召唤生物的生物投影仪；提供正负面效果的信标增强仪；更便捷强大的附魔处理的金砧等。</li>
 <li>傀儡——科技线的终端，全自动种田伐木钓鱼杀怪畜牧的傀儡。</li>
 <li>研究——需要玩家测定的矿物熔炼配比参数，需要玩家测定的附魔书仪式物品对应，和20种需要杂交获取的植物，满足你的研究欲望。</li>
-<li>食物装饰——41种植物、82种食物、79种头颅、21种头饰服饰、40种新春装饰、50种经典画作、103种纸片人、17种告示牌、100种称号，装点自己也装点自己的家。</li>
+<li>食物装饰——41种植物、82种食物、79种头颅、21种头饰服饰、40种新春装饰、50种经典画作、103种纸片人、16种告示牌、100种称号，装点自己也装点自己的家。</li>
 </ul>
 <p style="display: none;">本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
 <p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
 <p>更多版本请前往<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>下载。其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含1.10及以上版本的内容。</p>
-<p>Gitee源暂不可用。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
 	<th>下载地址</th></tr></thead>
@@ -1928,22 +1927,22 @@
 <tr><td rowspan="2"><a class="ui crimson_fungus"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
 	<td rowspan="2">绯红菌+<a href="#肥料">肥料</a></td>
 	<td><a class="ui crimson_stem"><span class="stack">3</span></a><a class="ui crimson_fungus"><span class="stack">?</span></a></td>
-	<td>3绯红菌柄+0~3绯红菌</td>
+	<td>3 绯红菌柄+0~3 绯红菌</td>
 	<td rowspan="2">2</td>
 	<td rowspan="2">2</td>
 </tr>
 <tr><td><a class="ui nether_wart_block"><span class="stack">3</span></a><a class="ui crimson_fungus"><span class="stack">?</span></a></td>
-	<td>3下界疣块+0~3绯红菌</td>
+	<td>3 下界疣块+0~3 绯红菌</td>
 </tr>
 <tr><td rowspan="2"><a class="ui warped_fungus"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
 	<td rowspan="2">诡异菌+<a href="#肥料">肥料</a></td>
 	<td><a class="ui warped_stem"><span class="stack">3</span></a><a class="ui warped_fungus"><span class="stack">?</span></a></td>
-	<td>3诡异菌柄+0~3诡异菌</td>
+	<td>3 诡异菌柄+0~3 诡异菌</td>
 	<td rowspan="2">2</td>
 	<td rowspan="2">2</td>
 </tr>
 <tr><td><a class="ui warped_wart_block"><span class="stack">3</span></a><a class="ui warped_fungus"><span class="stack">?</span></a></td>
-	<td>3诡异疣块+0~3诡异菌</td>
+	<td>3 诡异疣块+0~3 诡异菌</td>
 </tr>
 <tr><td><a href="#水果树树苗" class="ui ci fruit_sapling"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
 	<td><a href="#水果树树苗">水果树树苗</a>+<a href="#肥料">肥料</a></td>
@@ -3345,7 +3344,7 @@
 	<td><a class="ui clay" title="粘土块"></a></td>
 	<td><a class="ui quartz_block" title="石英块"></a></td>
 	<td><a class="ui copper_block" title="铜块"></a></td>
-	<td><a class="ui coal" title="煤"><span class="stack">?</span></a></td>
+	<td><a class="ui coal" title="煤炭"><span class="stack">?</span></a></td>
 	<td><a class="ui lapis_lazuli" title="青金石"><span class="stack">?</span></a></td>
 	<td><a class="ui redstone" title="红石粉"><span class="stack">?</span></a></td>
 	<td><a class="ui quartz" title="下界石英"><span class="stack">?</span></a></td>
@@ -5104,7 +5103,7 @@
 <tr><th>下界合金锭</th>
 	<td>下界合金剑<br />下界合金工具<br />下界合金盔甲</td>
 	<td><span class="ui fur" title="熔炉或高炉">
-		<a class="netherite_pickaxe" title="下界合金剑"></a>
+		<a class="netherite_pickaxe" title="下界合金镐"></a>
 		<a class="coal" title="燃料"></a>
 		<a class="netherite_ingot" title="下界合金锭"></a>
 	</span></td>
@@ -6326,7 +6325,7 @@
 		<a class="ci reinforced_glass" title="钢化玻璃"></a>
 		<a href="#附魔之瓶" class="experience_bottle" title="附魔之瓶"></a>
 		<a class="ci reinforced_glass" title="钢化玻璃"></a>
-		<a class="ci industrious_hand" title="破坏之手"></a>
+		<a class="ci industrious_hand" title="勤劳之手"></a>
 	</span></td></tr>
 </tbody></table>
 
@@ -6845,9 +6844,9 @@
 
 <tr><th><strong id="蛋糕卷">蛋糕卷</strong><br />
 		<a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger_half" title="5"></a></th>
-	<td>牛奶+糖+鸡蛋+小麦+<a href="#酵母粉">酵母粉</a></td>
+	<td>牛奶桶+糖+鸡蛋+小麦+<a href="#酵母粉">酵母粉</a></td>
 	<td><span class="ui cm" title="合成器">
-		<a class="milk_bucket" title="牛奶"></a>
+		<a class="milk_bucket" title="牛奶桶"></a>
 		<a class="sugar" title="糖"></a>
 		<a class="egg" title="鸡蛋"></a>
 		<a class="wheat" title="小麦"></a>
@@ -6884,9 +6883,9 @@
 <tr><th rowspan="2"><strong id="焦糖布丁">焦糖布丁</strong><br />
 	<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
 	<a class="ui icons18 speed"></a><span class="lore">速度 00:30</span></th>
-<td>牛奶+糖+鸡蛋+蜂蜜瓶 <span class="oldversion">1.10-1.11.1</span></td>
+<td>牛奶桶+糖+鸡蛋+蜂蜜瓶 <span class="oldversion">1.10-1.11.1</span></td>
 <td><span class="ui cm" title="合成器">
-	<a class="milk_bucket" title="牛奶"></a>
+	<a class="milk_bucket" title="牛奶桶"></a>
 	<a class="sugar" title="糖"></a>
 	<a class="egg" title="鸡蛋"></a>
 	<a class="honey_bottle" title="蜂蜜瓶"></a>
@@ -6901,9 +6900,9 @@
 <td rowspan="2"><code>cpp:caramel_pudding</code></td>
 </tr>
 <tr>
-	<td>牛奶+糖+鸡蛋+蜂蜜瓶+碗 <span class="version">1.11.2 起</span></td>
+	<td>牛奶桶+糖+鸡蛋+蜂蜜瓶+碗 <span class="version">1.11.2 起</span></td>
 	<td><span class="ui cm" title="合成器">
-		<a class="milk_bucket" title="牛奶"></a>
+		<a class="milk_bucket" title="牛奶桶"></a>
 		<a class="sugar" title="糖"></a>
 		<a class="egg" title="鸡蛋"></a>
 		<a class="honey_bottle" title="蜂蜜瓶"></a>
@@ -8113,11 +8112,11 @@
 		<a class="ui icons18 hunger" title="6"></a><a class="ui icons18 hunger" title="6"></a><a class="ui icons18 hunger" title="6"></a><br />
 		<span class="lore"><a class="ui icons18 jump_boost"></a>跳跃提升 II 6:00<br />
 		<a class="ui icons18 haste"></a>急迫 II 6:00</span></th>
-	<td><a href="#泥土之魂">泥土之魂</a>+粗制的药水</td>
+	<td><a href="#大地之证">大地之证</a>+粗制的药水</td>
 	<td><span class="ui aiom" title="多功能一体机">
 		<a class="ci normal_case" title="常温"></a>
 		<a class="ci low_pressure" title="低压"></a>
-		<a href="#泥土之魂" class="ui ci certification_of_earth" title="泥土之魂"></a>
+		<a href="#大地之证" class="ui ci certification_of_earth" title="大地之证"></a>
 		<a class="ui water_bottle"></a>
 		<a class="ui ci agentia_of_earth"></a>
 		<a class="empty"></a>
@@ -8944,7 +8943,8 @@
 <!--==================================================================-->
 <h2 id="装饰">装饰</h2>
 <h3 id="称号">称号</h3>
-<p>玩家手持1个绿宝石并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可消耗绿宝石并获得相应称号。</p>
+<p>玩家手持绿宝石并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可消耗1个绿宝石并获得相应称号。</p>
+<p><span class="version">1.9-1.11.1</span> 必须手持1个绿宝石。</p>
 <p>设置为101可以取消称号。</p>
 <table class="center">
 <thead>
@@ -9214,7 +9214,7 @@
 		<a class="poppy" title="虞美人"></a>
 		<a class="ci garland" title="花环"></a>
 	</span></td>
-	<td><code>cpp:garland</code><br />每10秒恢复玩家1点魔法值，上限30点。</td>
+	<td><code>cpp:garland</code></td>
 </tr>
 
 <tr id="黑框眼镜">
@@ -9323,7 +9323,7 @@
 		<a class="yellow_dye" title="黄色染料"></a>
 		<a class="ci empire_hat" title="冕旒"></a>
 	</span></td>
-	<td><code>cpp:empire_hat</code><br />每10秒恢复玩家1点魔法值，上限100点。</td>
+	<td><code>cpp:empire_hat</code></td>
 </tr>
 
 <tr id="玻璃头盔">
@@ -9377,7 +9377,7 @@
 		<a class="empty"></a>
 		<a class="ci green_hat" title="原谅帽"></a>
 	</span></td>
-	<td><code>cpp:green_hat</code><br />每10秒恢复玩家1点魔法值，上限60点。</td>
+	<td><code>cpp:green_hat</code></td>
 </tr>
 
 <tr id="非酋帽">
@@ -10044,7 +10044,7 @@
 	<td><a class="ui bamboo" title="竹子"></a></td>
 	
 	<td><a class="ui quartz" title="石英"></a></td>
-	<td><a class="ui clay_ball" title="粘土"></a></td>
+	<td><a class="ui clay_ball" title="粘土球"></a></td>
 	<td><a class="ui nether_wart" title="下界疣"></a></td>
 	<td><a class="ui blaze_powder" title="烈焰粉"></a></td>
 	<td><a class="ui weeping_vines" title="垂泪藤"></a></td>
@@ -10053,7 +10053,7 @@
 </tr>
 <tr>
 	<td>32% 草丛</td><td>8% 橡树树苗</td><td>8% 云杉树苗</td><td>8% 白桦树苗</td><td>8% 丛林树苗</td><td>8% 金合欢树苗</td><td>8% 深色橡树树苗</td><td>2% 水果树树苗</td><td>2% 羊毛树树苗</td><td>2% 矿石树树苗</td><td>2% 樱花树树苗<br /></td><td>2% 竹子</td>
-	<td>55% 石英</td><td>20% 粘土</td><td>9% 下界疣</td><td>5% 烈焰粉</td><td>5% 垂泪藤<br /></td><td>5% 缠怨藤<br /></td><td>1% 恶魂之泪</td>
+	<td>55% 石英</td><td>20% 粘土球</td><td>9% 下界疣</td><td>5% 烈焰粉</td><td>5% 垂泪藤<br /></td><td>5% 缠怨藤<br /></td><td>1% 恶魂之泪</td>
 </tr>
 </tbody></table>
 
@@ -10091,7 +10091,7 @@
 	<td><a class="ui gravel" title="砂砾"></a></td>
 	<td><a class="ui soul_sand" title="灵魂沙"></a></td>
 	<td><a class="ui flint" title="燧石"></a></td>
-	<td><a class="ui coal" title="煤"></a></td>
+	<td><a class="ui coal" title="煤炭"></a></td>
 	<td><a class="ui iron_nugget" title="铁粒"></a></td>
 	<td><a class="ui gold_nugget" title="金粒"></a></td>
 	<td><a class="ui quartz" title="石英"></a></td>	
@@ -10205,7 +10205,7 @@
 <tr><td><span class="ui challenge"><a class="ci star_wand"></a></span></td>
 <th>Release!</th>
 	<td>星之杖</td>
-	<td>500点经验，若玩家无头盔或帽子，则会绑定小樱头。</td>
+	<td>500点经验</td>
 	<td>成为马猴烧酒</td>
 	<td>cpp:star_wand</td>
 </tr>
@@ -10376,7 +10376,7 @@
 </tr>
 
  </tbody></table>
-
+<!-- 
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
 	<thead style="border:1px solid #aaa;border-collapse:collapse;">
 		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:10%;">版本</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:90%;">变动</th></tr>
@@ -10388,7 +10388,7 @@
 		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在创造模式自动插火把不会消耗，但背包内至少要有火把。</td></tr>
 		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">重新设计，现在会在离玩家最近的四个XZ坐标为 cppTorchPeriod 的整数倍的位置放置火把。</td></tr>
 	</tbody>
-</table>
+</table> -->
 <!--
 
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
