--- a/index.html
+++ b/index.html
@@ -390,18 +390,18 @@
 <tbody>
 	<tr>
 		<td rowspan="2">Java版 20w51a</td>
-		<td>v1.12-1221</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1221">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1221">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1221.zip">其它</a></td>
+		<td>v1.12-1224</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1224">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1224">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1224.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="2">Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-1221</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1221">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1221">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1221.zip">其它</a></td>
+		<td>v1.11.2-1224</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1224">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1224">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1224.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
@@ -423,7 +423,7 @@
 
 <p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
 <ul>
-	<li><strong>v1.11.2 起</strong> 下载后解压缩。在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，选择至右侧以启用。</li>
+	<li><strong>v1.11.2 起</strong> 无需解压。在生成世界前可以在世界预设中点击数据包，将下载的压缩包拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将下载的压缩包拖拽进打开的界面，选择至右侧以启用。</li>
 	<li><strong>v1.11-1.11.1</strong> 下载后解压缩。在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，选择至右侧以启用。注意服务器需要开启命令方块。</li>
 	<li><strong>v1.10</strong> 下载后解压缩。生成的世界后，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将<code>更多的合成资源包.zip</code>放入文件夹内，然后在资源包页面将其选择至右侧以启用。</li>
 </ul>
@@ -5915,7 +5915,7 @@
 <h3 id="白色电之力">白色电之力 <code>cpp:white_force_of_lightning</code></h3>
 <p>根据脚下方块的不同，将附近15×15米的方块进行转化。</p>
 <table class="onlyicons"><tbody>
-	<tr><td><a class="ui dirt" title="橡树树苗"></a>→<a class="ui grass_block" title="草方块"></a>→<a class="ui stone" title="石头"></a>→<a class="ui sand" title="沙子"></a>→<a class="ui red_sand" title="红沙"></a>→<a class="ui gravel" title="砂砾"></a>→<a class="ui podzol" title="灰化土"></a>→<a class="ui mycelium" title="菌丝"></a>→<a class="ui dirt" title="泥土"></a></td></tr>
+	<tr><td><a class="ui dirt" title="泥土"></a>→<a class="ui grass_block" title="草方块"></a>→<a class="ui stone" title="石头"></a>→<a class="ui sand" title="沙子"></a>→<a class="ui red_sand" title="红沙"></a>→<a class="ui gravel" title="砂砾"></a>→<a class="ui podzol" title="灰化土"></a>→<a class="ui mycelium" title="菌丝"></a>→<a class="ui dirt" title="泥土"></a></td></tr>
 	<tr><td><a class="ui ci water" title="水"></a>→<a class="ui ice" title="冰"></a>→<a class="ui ci water" title="水"></a></td></tr>
 	<tr><td><a class="ui ci lava" title="熔岩"></a>→<a class="ui obsidian" title="黑曜石"></a>→<a class="ui ci lava" title="熔岩"></a></td></tr>
 	<tr><td><a class="ui netherrack" title="下界岩"></a>→<a class="ui crimson_nylium" title="绯红菌岩"></a>→<a class="ui warped_nylium" title="诡异菌岩"></a>→<a class="ui blackstone" title="黑石"></a>→<a class="ui end_stone" title="末地石"></a>→<a class="ui netherrack" title="下界岩"></a></td></tr>
@@ -10376,19 +10376,61 @@
 </tr>
 
  </tbody></table>
-<!-- 
+
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
 	<thead style="border:1px solid #aaa;border-collapse:collapse;">
 		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:10%;">版本</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:90%;">变动</th></tr>
 	</thead>
 	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.9.3</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了自动插火把功能。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">使用指令 /trigger cppAutoTorch set <刻数> 来设置，每隔一段时间自动插一根火把。设置为0取消自动插火把功能。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.9.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了自动插火把无效的问题。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在创造模式自动插火把不会消耗，但背包内至少要有火把。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">重新设计，现在会在离玩家最近的四个XZ坐标为 cppTorchPeriod 的整数倍的位置放置火把。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了活塞回收花岗岩、闪长岩、安山岩以得到下界石英的配方。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在粘性活塞可以代替活塞参与回收。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.6</th><td style="border:1px solid #aaa;border-collapse:collapse;">不再支持使用粘性活塞回收。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.6.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以一次性回收64个安山岩、闪长岩、花岗岩，64个木炭。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了仍能使用粘性活塞回收的错误。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了多功能一体机，拥有三种压力、温度模式，以及很多种功能，可调节输出方向。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.8.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">修改多功能一体机存储经验量最高为48。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">为多功能一体机安装插件不会再打开机器了。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复多功能一体机被破坏后掉落的插件不正确的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高温低压模式下向上的输出错误。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="10">1.9</th><td style="border:1px solid #aaa;border-collapse:collapse;">配方中箱子替换为木桶。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">实际方块替换为木桶。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">被强充能时停止工作。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高温低压模式下向上的输出错误。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以按左键切换模式和输出方向。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以输出到木桶。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">常温常压模式下可以繁殖竹子、甜浆果、花草。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整常温高压下部分产物几率和数量。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">移除多功能一体机常温高压下压缩功能。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整多功能一体机中常温高压模式下矿物粉的数量。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.9.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">常温常压下花草不再可以代替金合欢树苗生产金合欢木。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="6">1.9.5</th><td style="border:1px solid #aaa;border-collapse:collapse;">修改了机器的GUI。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在机器没有输出槽了。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">机器支持输出到大箱子。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">当输出的容器空间不足时，机器本身会高亮显示。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在机器输出支持发射器、投掷器和漏斗了。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">为多功能一体机添加了函数标签#cpp:all_in_one_machine。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.9.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了满箱时的错误行为。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改了部分战利品表的调用。#cpp:all_in_one_machine。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.9.17</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高压常温模式处理红石矿石和青金石矿石产物不正确的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="6">1.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">被破坏后会保留内部的经验值。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">可以至多存储100点经验值。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机常温常压模式下经验消耗不正确的问题。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机和生物投影仪经验条显示错误。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可使用 /scoreboard players set $allInOneMachinePeriod cppConfig [数值] 来设置多功能一体机工作周期，默认为1200。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">移除了黑曜石插件相关配方。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.3</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机常温低压模式下使用稀有掉落物酿造只会得到弹力药剂的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.4</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在多功能一体机增殖羊毛树/矿石树/水果树产量翻倍。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.7</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高温高压模式处理下界石英矿和绿宝石矿时没有输出的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了成熟花草也可以在多功能一体机繁殖为金合欢的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了紫色命之力转化得到的深色橡树树苗在多功能一体机繁殖出错的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以处理下界金矿石了。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以处理远古残骸了。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.12</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以处理铜矿石了。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
 	</tbody>
-</table> -->
+</table> 
 <!--
 
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
@@ -10431,7 +10473,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-12-21</p>
+<p>最后更新 2020-12-24</p>
 </footer>
 
 </article>
