--- a/index.html
+++ b/index.html
@@ -390,15 +390,14 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td rowspan="2">Java版 20w51a</td>
+		<td>Java版 20w51a</td>
 		<td>v1.12-1226</td>
 		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1226">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1226">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1226.zip">其它</a></td>
 	</tr>
-	<tr><td colspan="3"></td></tr>
 	<tr>
-		<td rowspan="2">Java版 1.16.2-1.16.4</td>
+		<td>Java版 1.16.2-1.16.4</td>
 		<td>v1.11.2-1226</td>
 		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1226">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1226">GitHub</a> |
@@ -406,7 +405,7 @@
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
-		<td rowspan="2">Java版 1.16-1.16.1</td>
+		<td>Java版 1.16-1.16.1</td>
 		<td>v1.11.1</td>
 		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.1">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.1">GitHub</a> |
@@ -642,8 +641,8 @@
 <p>溺尸被玩家杀死时有<code>0.53125%+抢夺等级×0.0625%</code>几率掉落三叉戟，且耐久在1%-10%之间，拥有10-30级附魔。</p>
 
 <h3 id="钓鱼">钓鱼</h3>
-<p>有几率钓到宝藏珊瑚、珊瑚扇、湿海绵、<a href="#鳕鱼头">鳕鱼头</a>、<a href="#鲑鱼头">鲑鱼头</a>、<a href="#热带鱼头">热带鱼头</a>、<a href="#河豚头">河豚头</a>、<a href="#水晶之心">水晶之心</a>和垃圾火药、海晶碎片。</p>
-<p>有几率钓到垃圾海泡菜。在末地钓鱼有几率钓到宝藏潜影壳和紫颂花。</p>
+<p>有几率钓到宝藏珊瑚、珊瑚扇、湿海绵、<a href="#鳕鱼头">鳕鱼头</a>、<a href="#鲑鱼头">鲑鱼头</a>、<a href="#热带鱼头">热带鱼头</a>、<a href="#河豚头">河豚头</a>、<a href="#水晶之心">水晶之心</a>和垃圾火药、海晶碎片、海泡菜。</p>
+<p>在末地钓鱼有几率钓到宝藏潜影壳和紫颂花。</p>
 <p><span class="version">1.11.2 起</span> 在末地钓鱼有几率钓到宝藏龙首，在主世界以外不能钓到鱼头。</p>
 
 <h3 id="玩家的头">玩家的头</h3>
@@ -928,7 +927,7 @@
 <tr><th><strong id="大地之证">大地之证</strong></th>
 	<td><a class="ui ci certification_of_earth"></a></td>
 	<td><code>cpp:certification_of_earth</code></td>
-	<td>僵尸村民/村民/流浪商人/卫道士/唤魔者/掠夺兽/掠夺者/女巫/猪灵被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</td>
+	<td>僵尸村民/村民/流浪商人/卫道士/唤魔者/劫掠兽/掠夺者/女巫/猪灵被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</td>
 </tr>
 <tr><th><strong id="火焰之星">火焰之星</strong></th>
 	<td><a class="ui ci nova_of_fire"></a></td>
@@ -2139,8 +2138,8 @@
 	<td>4</td>
 	<td>10</td>
 </tr>
-<tr><td><a title="发酵蛛眼" class="ui fermented_spider_eye"></a><a title="鸡蛋" class="ui egg"></a></td>
-	<td>发酵蛛眼+鸡蛋</td>
+<tr><td><a href="#氨制冷剂" title="氨制冷剂" class="ui ci ammonia_refrigerant"></a><a title="鸡蛋" class="ui egg"></a></td>
+	<td><a href="#氨制冷剂">氨制冷剂</a>+鸡蛋</td>
 	<td><a href="#疫苗" class="ui ci vaccine_of_poison"></a></td>
 	<td><a href="#疫苗">疫苗</a> <br /><span class="lore">免疫 中毒(3:00:00)</span></td>
 	<td>8</td>
@@ -2160,15 +2159,15 @@
 	<td>8</td>
 	<td>60</td>
 </tr>
-<tr><td><a href="#生命之灵" title="生命之灵" class="ui ci spirit_of_life"></a><a title="鸡蛋" class="ui egg"></a></td>
-	<td><a href="#生命之灵">生命之灵</a>+鸡蛋</td>
+<tr><td><a href="#盐瓶" title="盐瓶" class="ui ci bottle_of_salt"></a><a title="鸡蛋" class="ui egg"></a></td>
+	<td><a href="#盐瓶">盐瓶</a>+鸡蛋</td>
 	<td><a href="#疫苗" class="ui ci vaccine_of_wither"></a></td>
 	<td><a href="#疫苗">疫苗</a> <br /><span class="lore">免疫 凋零(3:00:00)</span></td>
 	<td>8</td>
 	<td>60</td>
 </tr>
-<tr><td><a href="#黑暗碎片" title="黑暗碎片" class="ui ci shard_of_the_darkness"></a><a title="鸡蛋" class="ui egg"></a></td>
-	<td><a href="#黑暗碎片">黑暗碎片</a>+鸡蛋</td>
+<tr><td><a href="#空气瓶" title="空气瓶" class="ui ci bottle_of_air"></a><a title="鸡蛋" class="ui egg"></a></td>
+	<td><a href="#空气瓶">空气瓶</a>+鸡蛋</td>
 	<td><a href="#疫苗" class="ui ci vaccine_of_darkness"></a></td>
 	<td><a href="#疫苗">疫苗</a> <br /><span class="lore">免疫 黑暗(12:00:00)</span></td>
 	<td>8</td>
@@ -8204,11 +8203,11 @@
 	<th>命名空间ID</th>
 </tr></thead><tbody>
 <tr><th><strong id="中毒疫苗">疫苗</strong><br /><span class="lore">免疫 <a class="ui icons18 poison"></a>中毒(3:00:00)</span></th>
-	<td>发酵蛛眼+鸡蛋</td>
+	<td><a href="#氨制冷剂">氨制冷剂</a>+鸡蛋</td>
 	<td><span class="ui aiom" title="多功能一体机">
 		<a class="ci normal_case" title="常温"></a>
 		<a class="ci low_pressure" title="低压"></a>
-		<a class="ui fermented_spider_eye"></a>
+		<a href="#氨制冷剂" class="ui ci ammonia_refrigerant"></a>
 		<a class="ui egg"></a>
 		<a class="ui ci vaccine_of_poison"></a>
 		<a class="empty"></a>
@@ -8243,11 +8242,11 @@
 	<td><code>cpp:vaccine_of_mining_fatigue</code></td>
 </tr>
 <tr><th><strong id="凋零疫苗">疫苗</strong><br /><span class="lore">免疫 <a class="ui icons18 wither"></a>凋零(3:00:00)</span></th>
-	<td><a href="#生命之灵">生命之灵</a>+鸡蛋</td>
+	<td><a href="#盐瓶">盐瓶</a>+鸡蛋</td>
 	<td><span class="ui aiom" title="多功能一体机">
 		<a class="ci normal_case" title="常温"></a>
 		<a class="ci low_pressure" title="低压"></a>
-		<a class="ui ci spirit_of_life"></a>
+		<a href="#盐瓶" class="ui ci bottle_of_salt"></a>
 		<a class="ui egg"></a>
 		<a class="ui ci vaccine_of_wither"></a>
 		<a class="empty"></a>
@@ -8256,11 +8255,11 @@
 	<td><code>cpp:vaccine_of_wither</code></td>
 </tr>
 <tr><th><strong id="黑暗疫苗">疫苗</strong><br /><span class="lore">免疫 黑暗(12:00:00)</span></th>
-	<td><a href="#黑暗碎片">黑暗碎片</a>+鸡蛋</td>
+	<td><a href="#空气瓶">空气瓶</a>+鸡蛋</td>
 	<td><span class="ui aiom" title="多功能一体机">
 		<a class="ci normal_case" title="常温"></a>
 		<a class="ci low_pressure" title="低压"></a>
-		<a class="ui ci shard_of_the_darkness"></a>
+		<a href="#空气瓶" class="ui ci bottle_of_air"></a>
 		<a class="ui egg"></a>
 		<a class="ui ci vaccine_of_darkness"></a>
 		<a class="empty"></a>
@@ -10545,7 +10544,7 @@
 		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
 	</tbody>
 </table> 
-<!--
+
 
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
 	<thead style="border:1px solid #aaa;border-collapse:collapse;">
