--- a/index.html
+++ b/index.html
@@ -391,17 +391,17 @@
 <tbody>
 	<tr>
 		<td>Java版 20w51a</td>
-		<td>v1.12-1226</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1226">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1226">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1226.zip">其它</a></td>
+		<td>v1.12-1230</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1230">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1230">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1230.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-1226</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1226">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1226">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1226.zip">其它</a></td>
+		<td>v1.11.2-1230</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1230">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1230">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1230.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
@@ -423,9 +423,14 @@
 
 <p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
 <ul>
-	<li><strong>v1.11.2 起</strong> 无需解压。在生成世界前可以在世界预设中点击数据包，将下载的压缩包拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将下载的压缩包拖拽进打开的界面，选择至右侧以启用。</li>
-	<li><strong>v1.11-1.11.1</strong> 下载后解压缩。在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，选择至右侧以启用。注意服务器需要开启命令方块。</li>
-	<li><strong>v1.10</strong> 下载后解压缩。生成的世界后，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将<code>更多的合成资源包.zip</code>放入文件夹内，然后在资源包页面将其选择至右侧以启用。</li>
+	<li>安装数据包：<ul>
+		<li>如果是新的世界，在生成世界时可以在世界预设中点击<code>数据包</code>，将下载好的文件拖拽进打开的界面，并选择至右侧以启用。</li>
+		<li>如果是旧的世界，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。</li>
+	</ul></li>
+	<li>安装资源包：<ul>
+		<li>在主页面点击<code>选项->资源包</code>，将下载好的文件拖拽进打开的界面，选择至右侧以启用。</li>
+		<li>也可以在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将下载好的文件放入文件夹内，然后在资源包页面将其选择至右侧以启用。</li>
+	</ul></li>
 </ul>
 
 <h3 id="常见问题">📄 常见问题</h3>
@@ -1551,7 +1556,7 @@
 	<td>4</td>
 	<td>10</td>
 </tr>
-<tr><td><a class="ui glass_bottle"></a><a class="ui sand"></a></td>
+<tr><td><a class="ui glass_bottle" title="玻璃瓶"></a><a class="ui sand"></a></td>
 	<td>玻璃瓶+沙子/红沙</td>
 	<td><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
 	<td><a href="#盐瓶">盐瓶</a></td>
@@ -1584,7 +1589,7 @@
 	<td>4</td>
 	<td>10</td>
 </tr>
-<tr><td><a class="ui glass_bottle"></a><a class="ui piston"></a></td>
+<tr><td><a class="ui glass_bottle" title="玻璃瓶"></a><a class="ui piston"></a></td>
 	<td>玻璃瓶+活塞</td>
 	<td><a href="#空气瓶" class="ui ci bottle_of_air"></a></td>
 	<td><a href="#空气瓶">空气瓶</a></td>
@@ -1593,29 +1598,29 @@
 </tr>
 <tr><td><a href="#粗硅" class="ui ci coarse_silicon"></a><a href="#空气瓶" class="ui ci bottle_of_air"></a></td>
 	<td><a href="#粗硅">粗硅</a>+<a href="#空气瓶">空气瓶</a></td>
-	<td><a href="#硅粉" class="ui ci silicon_dust"></a></td>
-	<td><a href="#硅粉">硅粉</a></td>
+	<td><a href="#硅粉" class="ui ci silicon_dust"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
+	<td><a href="#硅粉">硅粉</a>>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
 <tr><td><a class="ui clay_ball" title="粘土球"></a><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
 	<td>粘土球+<a href="#盐瓶">盐瓶</a></td>
-	<td><a href="#稀土盐" class="ui ci rare_earth_salt"></a></td>
-	<td><a href="#稀土盐">稀土盐</a></td>
+	<td><a href="#稀土盐" class="ui ci rare_earth_salt"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
+	<td><a href="#稀土盐">稀土盐</a>>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
 <tr><td><a href="#稀土盐" class="ui ci rare_earth_salt"></a><a href="#酸水" class="ui ci alkaloid"></a></td>
 	<td><a href="#稀土盐">稀土盐</a>+<a href="#生物碱">生物碱</a></td>
-	<td><a href="#碱性稀土" class="ui ci alkaloid_rare_earth"></a></td>
-	<td><a href="#碱性稀土">碱性稀土</a></td>
+	<td><a href="#碱性稀土" class="ui ci alkaloid_rare_earth"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
+	<td><a href="#碱性稀土">碱性稀土</a>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
 <tr><td><a href="#碱性稀土" class="ui ci alkaloid_rare_earth"></a><a href="#生物酸" class="ui ci bionic_acid"></a></td>
 	<td><a href="#碱性稀土">碱性稀土</a>+<a href="#生物酸">生物酸</a></td>
-	<td><a href="#稀土粉" class="ui ci rare_earth_dust"></a></td>
-	<td><a href="#稀土粉">稀土粉</a></td>
+	<td><a href="#稀土粉" class="ui ci rare_earth_dust"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
+	<td><a href="#稀土粉">稀土粉</a>>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -10586,7 +10591,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-12-26</p>
+<p>最后更新 2020-12-30</p>
 </footer>
 
 </article>
